# IB

./: README.md
Examenes/enero/ejercicio1/: funciones.h
Examenes/enero/ejercicio2/: funciones.cc  funciones.h  main.cc
Examenes/enero/ejercicio3/: Makefile  main.cc
Examenes/enero24-25/ejercicio1/: Makefile  funciones.cc  main.cc
Examenes/enero24-25/ejercicio3/: funciones.cc  funciones.h
Examenes/junio/ejercicio2/: main.cc
Examenes/junio24-25/ejercicio1/: main.cc
Examenes/junio24-25/ejercicio3/: Makefile  class.cc  class.h  main.cc  producto.txt
Learning_to_program/Introduction/P15613-temperatures/: salida2
Learning_to_program/Introduction/P51126-intervals_1/: intervals1
Practicas/Practica1/: README.md
Practicas/Practica10/: string-array-vector.md
Practicas/Practica11/: files.md
Practicas/Practica12/: intro-oop.md
Practicas/Practica13/: README.md
Practicas/Practica14/: README.md
Practicas/Practica2/: Linux-Commands.md
Practicas/Practica3/: .03navigatingLines.txt.swp  08openingJoining.txt  09undoAndRedo.txt  10replacing.txt  11deleting.txt  16-marking.txt  19-buffersDigits.txt  20-buffersLetters.txt
Practicas/Practica4/: LICENSE  first-programs.md
Practicas/Practica5/: expressions.md  references_and_pointers.cc
Practicas/Practica6/: alternatives-and-iterations.md
Practicas/Practica7/: .gitignore  iterations.md
Practicas/Practica8/: floating-point-arithmetics.cc  functions.md
Practicas/Practica9/: functions.md
Practicas/Practica9/ejercicios/ejercicio4_approximate_root/: CMakeLists.txt
Practicas/Practica9/ejercicios/ejercicio4_approximate_root/src/: approximate_root.cc  funciones.cc  funciones.h
Problemas/Hoja1/: t.txt
Puntito/fichero1/: fichero.txt  main.cc
Puntito/fichero2/: funciones.cc  funciones.h  main.cc  nombre
(+677 files in other folders)
